--- a/webos/src/appinfo.json
+++ b/webos/src/appinfo.json
@@ -4,7 +4,7 @@
   "vendor": "redphx",
   "type": "web",
   "main": "index.html",
-  "title": "Better xCloud",
+  "title": "Better xCloud (Lite)",
   "icon": "icon.png",
   "largeIcon": "largeIcon.png",
   "iconColor": "#107c10",
@@ -13,7 +13,7 @@
     "supportsAudioGuidance": false
   },
   "vendorExtension": {
-    "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/115.0.0.0 Safari/537.36 Edg/115.0.1901.188 SmartTV FC4A1DA2-711C-4E9C-BC7F-047AF8A672EA",
+    "userAgent": "Mozilla/5.0 (SMART-TV; LINUX; Tizen 7.0) AppleWebKit/537.36 (KHTML, like Gecko) FC4A1DA2-711C-4E9C-BC7F-047AF8A672EA",
     "allowCrossDomain": true
   },
   "enablePigScreenSaver": false,
